--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,7 @@
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
     <span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/author">Creditos</a></span>
   </nav>
 
   <section class="main" id="s1">
@@ -32,6 +33,9 @@
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">
       ¿Que es un Quiz?</a>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="https://github.com/mlillo/random">
+      Proyecto en hithub</a>
   </footer>
 </div>
 </body> 
